--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,9 @@
 <div class="wrapper">
     <div class="wrapper-in">
         <h1>SASS-demo</h1>
+	    <div class="ss" style="position: absolute; width: 100px; height: 100px; top: 100px; left: 50px; background-color: #FFF;">
+		    haha
+	    </div>
     </div>
 </div>
 </body>
