更新并开始写文档

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,17 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SASS-demo</title>
+    <title>SASS-doc</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+
 <div class="wrapper">
-    <div class="wrapper-in">
-        <h1>SASS-demo</h1>
-	    <div class="ss" style="position: absolute; width: 100px; height: 100px; top: 100px; left: 50px; background-color: #FFF;">
-		    haha
-	    </div>
-    </div>
+	<div class="wrapper-in">
+		<!-- 侧边栏 -->
+		<div class="slide-bar">
+			<h1 class="slide-tit">SASS文档说明</h1>
+			<h2 class="slide-tit-sub">Core</h2>
+			<ul class="slide-ul">
+				<li><a href="#floor1">reset</a></li>
+				<li><a href="#floor2">media-queries</a></li>
+				<li><a href="#floor3">mixin</a></li>
+				<li><a href="#floor4">css3</a></li>
+				<li><a href="#floor4">config</a></li>
+				<li><a href="#">demo</a></li>
+			</ul>
+			<h2>
+				plugin
+			</h2>
+			<ul>
+				<li></li>
+			</ul>
+			<h2>...</h2>
+		</div>
+		<!-- 内容部分 -->
+		<div class="main">
+
+		</div>
+	</div>
 </div>
 </body>
 </html>
