--- a/demo/index.html
+++ b/demo/index.html
@@ -11,27 +11,43 @@
 	<div class="wrapper-in">
 		<!-- 侧边栏 -->
 		<div class="slide-bar">
-			<h1 class="slide-tit">SASS文档说明</h1>
-			<h2 class="slide-tit-sub">Core</h2>
-			<ul class="slide-ul">
-				<li><a href="#floor1">reset</a></li>
-				<li><a href="#floor2">media-queries</a></li>
-				<li><a href="#floor3">mixin</a></li>
-				<li><a href="#floor4">css3</a></li>
-				<li><a href="#floor4">config</a></li>
-				<li><a href="#">demo</a></li>
-			</ul>
-			<h2>
-				plugin
-			</h2>
+			<h1 class="slide-tit">JDCSASS文档</h1>
 			<ul>
-				<li></li>
+				<li class="nav-list">
+					<a href="javascript:;" data-url="">简介</a>
+				</li>
+				<li class="nav-list">
+					<a href="javascript:;">Core</a>
+					<ul class="sub-nav-list">
+						<li><a href="#floor1">reset</a></li>
+						<li><a href="#floor2">media-queries</a></li>
+						<li><a href="#floor3">mixin</a></li>
+						<li><a href="#floor4">css3</a></li>
+						<li><a href="#floor4">config</a></li>
+						<li><a href="#">demo</a></li>
+					</ul>
+				</li>
+				<li class="nav-list">
+					<a href="javascript:;">Plugin</a>
+					<ul class="sub-nav-list">
+						<li><a href="#floor1">reset</a></li>
+						<li><a href="#floor2">media-queries</a></li>
+						<li><a href="#floor3">mixin</a></li>
+						<li><a href="#floor4">css3</a></li>
+						<li><a href="#floor4">config</a></li>
+						<li><a href="#">demo</a></li>
+					</ul>
+				</li>
 			</ul>
-			<h2>...</h2>
 		</div>
+
 		<!-- 内容部分 -->
 		<div class="main">
-
+			<h1 class="main-tit">简介</h1>
+			<div class="content">
+				<h3>为什么创建这个框架？</h3>
+				<p>由于所处无线设计部门的工作性质，会有涉及到平台、APP内嵌、H5、iPad、各种PC端和移动端的活动。往往每个项目都需要一个类似<img src="img/pic1.png" alt="">这样的目录</p>
+			</div>			
 		</div>
 	</div>
 </div>
